--- a/BancoSangue/Views/Doacoes/Create.cshtml
+++ b/BancoSangue/Views/Doacoes/Create.cshtml
@@ -11,7 +11,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal caixa3">
+    <div class="form-horizontal caixa caixa-overflow ">
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -68,24 +68,26 @@
         </div>
         <fieldset>
 
-            <input type="file" id="AdicionaImagem" value="Enviar" name="Imagens" multiple />
+            <input class="file-left" type="file" id="AdicionaImagem" value="Enviar" name="Imagens" multiple />
         </fieldset>
 
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <asp:FileUpload runat="server" id="img" accept=".jpg,.png" AllowMultiple="True" />
-                <input type="submit" value="Create" class="btn btn-default" img src="~/Content" />
+                <input type="submit" value="Create" class="btn btn-default btn-right " img src="~/Content" />
 
             </div>
 
         </div>
+        <div>
+            @Html.ActionLink("Voltar para lista", "Index", null, new { @class = "btn btn-primary btn-left" })
+        </div>
+
     </div>
 }
 
-<div>
-    @Html.ActionLink("Voltar para lista", "Index")
-</div>
+
 <div hidden id="baseImagemCarrossel">
     <div class="col-xs-12 col-sm-6 selecionar">
         <div class="col-xs-12">
