--- a/BancoSangue/Views/Doacoes/Delete.cshtml
+++ b/BancoSangue/Views/Doacoes/Delete.cshtml
@@ -7,7 +7,7 @@
 <h2>Aviso! Você esta prestes a excluir uma campanha.</h2>
 
 <h3>Você tem certeza que deseja excluir?</h3>
-<div class="caixa3" >
+<div class="caixa" >
    
     <dl class="dl-horizontal">
         <dt>
@@ -64,12 +64,14 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> 
+            <input type="submit" value="Delete" class="btn btn-danger" /> 
            
         </div>
     }
+    <br/>
+    <div>
+        @Html.ActionLink("Voltar para a lista", "Index", null, new { @class = "btn btn-primary" })
+    </div>
 </div>
 
-<div>
-    @Html.ActionLink("Voltar para a lista", "Index")
-</div>
+
