--- a/BancoSangue/Views/Doacoes/Index.cshtml
+++ b/BancoSangue/Views/Doacoes/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="caixa">
     <p>
-        @Html.ActionLink("CRIAR NOVA CAMPANHA", "Create")
+        @Html.ActionLink("CRIAR NOVA CAMPANHA", "Create", null,new { @class = "btn btn-primary" })
     </p>
 
 
@@ -60,9 +60,11 @@
                     @Html.ActionLink("Create", "Create")
                 </td>*@
                 <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }) 
-                    @Html.ActionLink("Detalhes", "Details", new { id = item.Id }) 
-                    @Html.ActionLink("Deletar", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" }) 
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.Id },  new { @class = "btn btn-primary" }) 
+                    @Html.ActionLink("Deletar", "Delete", new { id = item.Id },  new { @class = "btn btn-danger" })
+
+
                 </td>
             </tr>
         }
